--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,8 +1,23 @@
 body {
   background-color: $white;
   color: $black;
+  margin: 0;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .page-padding {
   padding: 0 $space-s-2xl;
+}
+
+.no-scroll {
+  overflow: hidden;
 }
