--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,7 +1,9 @@
 @import "vars";
+@import "mixins";
 @import "base";
 
 @import "modules/typography";
 @import "modules/buttons";
 @import "modules/links";
 @import "modules/navigation";
+@import "modules/footer";
