--- a/src/scss/modules/_navigation.scss
+++ b/src/scss/modules/_navigation.scss
@@ -72,7 +72,7 @@ header {
     padding-top: $navbar-height;
     position: fixed;
     top: 0;
-    transition: left $transition-duration-short ease-in-out;
+    transition: left $transition-duration-short ease-in-out, visibility 0s linear $transition-duration-short;
     visibility: hidden;
     width: 100%;
 
@@ -83,6 +83,7 @@ header {
 
   &.open .nav-drawer {
     left: 0;
+    transition: left $transition-duration-short ease-in-out;
     visibility: visible;
   }
 
