implemented work grid layout

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -8,3 +8,7 @@
 @import "modules/navigation";
 @import "modules/footer";
 @import "modules/hero";
+@import "modules/work-card";
+@import "modules/work-grid";
+
+@import "pages/front-page";
