--- a/src/scss/modules/_hero.scss
+++ b/src/scss/modules/_hero.scss
@@ -1,24 +1,20 @@
 .hero {
   display: grid;
   grid-template-columns: 100%;
-  grid-template-rows: auto 100vh auto;
-  margin: $space-2xl auto;
+  grid-template-rows: 33vh 100vh auto;
 
   .title-area {
     grid-area: 1 / 1 / 2 / 2;
+    align-self: end;
   }
 
   .media-container {
     grid-area: 2 / 1 / 3 / 2;
 
-    img {
+    img, iframe, video {
+      border-radius: $border-radius;
       height: 100%;
       object-fit: cover;
-      width: 100%;
-    }
-
-    iframe {
-      height: 100%;
       width: 100%;
     }
   }
