Work grid lazy loads media

--- a/src/scss/modules/_work-card.scss
+++ b/src/scss/modules/_work-card.scss
@@ -1,5 +1,11 @@
 .work-card {
   height: 300px;
+  opacity: 1;
+  transition: opacity 1s ease-in-out;
+
+  &.lazy {
+    opacity: 0;
+  }
 
   a {
     border-radius: $space-2xs;
