Added full width media and text modules

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -10,5 +10,8 @@
 @import "modules/hero";
 @import "modules/work-card";
 @import "modules/work-grid";
+@import "modules/multi-column-text";
+@import "modules/simple-text";
+@import "modules/full-width-media";
 
 @import "pages/front-page";
