--- a/src/scss/modules/_hero.scss
+++ b/src/scss/modules/_hero.scss
@@ -1,11 +1,16 @@
 .hero {
   display: grid;
   grid-template-columns: 100%;
-  grid-template-rows: 33vh 100vh auto;
+  grid-template-rows: auto 100vh auto;
 
   .title-area {
-    grid-area: 1 / 1 / 2 / 2;
     align-self: end;
+    grid-area: 1 / 1 / 2 / 2;
+    margin-top: 25vh;
+
+    h1 {
+      max-width: calc(100vw * 2 / 3);
+    }
   }
 
   .media-container {
