Finished general module layouts

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -13,5 +13,6 @@
 @import "modules/multi-column-text";
 @import "modules/simple-text";
 @import "modules/full-width-media";
+@import "modules/media-and-text";
 
 @import "pages/front-page";
