--- a/src/scss/modules/_full-width-media.scss
+++ b/src/scss/modules/_full-width-media.scss
@@ -4,7 +4,8 @@
   width: 100%;
 
   .title-area {
-    h1 {
+    h2 {
+      margin: $space-s 0;
       max-width: calc(100vw * 2 / 3);
     }
   }
@@ -32,6 +33,7 @@
       top: 0;
       max-width: 100%;
       width: auto;
+      z-index: -1;
     }
 
     > iframe, video {
@@ -42,5 +44,6 @@
 
   .notes-area {
     grid-area: 3 / 1 / 4 / 2;
+    margin: $space-s 0;
   }
 }
