--- a/src/scss/modules/_hero.scss
+++ b/src/scss/modules/_hero.scss
@@ -8,6 +8,10 @@
     grid-area: 1 / 1 / 2 / 2;
     margin-top: 25vh;
 
+    &.secondary {
+      margin-top: 0;
+    }
+
     h1 {
       max-width: calc(100vw * 2 / 3);
     }
