Implemented background cppn geometry

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -14,5 +14,6 @@
 @import "modules/simple-text";
 @import "modules/full-width-media";
 @import "modules/media-and-text";
+@import "modules/background";
 
 @import "pages/front-page";
