--- a/src/scss/modules/_full-width-media.scss
+++ b/src/scss/modules/_full-width-media.scss
@@ -22,7 +22,7 @@
       content: "";
       grid-area: 1 / 1 / 2 / 2;
       width: 100%;
-      padding-top: (9 / 16) * 100%;
+      padding-top: calc(9 / 16) * 100%;
     }
 
     > img, > iframe, > video {
