--- a/src/scss/modules/_full-width-media.scss
+++ b/src/scss/modules/_full-width-media.scss
@@ -25,6 +25,18 @@
       padding-top: calc(9 / 16) * 100%;
     }
 
+    &.center > * {
+      margin: 0 auto;
+    }
+
+    &.left > * {
+      margin: 0 auto 0 0;
+    }
+
+    &.right > * {
+      margin: 0 0 0 auto;
+    }
+
     > img, > iframe, > video {
       border-radius: $border-radius;
       bottom: 0;
@@ -47,5 +59,13 @@
   .notes-area {
     grid-area: 3 / 1 / 4 / 2;
     margin: $space-s 0;
+
+    &.left {
+      text-align: left;
+    }
+
+    &.right {
+      text-align: right;
+    }
   }
 }
