--- a/src/scss/modules/_media-and-text.scss
+++ b/src/scss/modules/_media-and-text.scss
@@ -40,10 +40,16 @@
     img, video, iframe {
       border-radius: $border-radius;
       max-width: 100%;
+      width: 100%;
     }
 
     .notes-area {
-      margin: $space-s 0 0 0;
+      margin: $space-xs 0;
+
+      @include media-query($breakpoint-tablet) {
+        margin: $space-s 0 0 0;
+      }
+
 
       p {
         margin: 0;
@@ -53,9 +59,11 @@
 
   .text-container {
     grid-area: 4 / 1 / 5 / 2;
+    margin: 0 0 $space-s 0;
 
     @include media-query($breakpoint-tablet) {
       grid-area: 3 / 2 / 4 / 3;
+      margin-bottom: 0;
     }
 
     p:first-child {
